--- a/machine_learning_trading_bot.ipynb
+++ b/machine_learning_trading_bot.ipynb
@@ -563,9 +563,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d1/55kcfbk15432jl_vkv7xjbrm0000gn/T/ipykernel_2889/566489611.py:2: FutureWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
+      "/var/folders/d1/55kcfbk15432jl_vkv7xjbrm0000gn/T/ipykernel_8196/566489611.py:2: FutureWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
       "  ohlcv_df = pd.read_csv(\n",
-      "/var/folders/d1/55kcfbk15432jl_vkv7xjbrm0000gn/T/ipykernel_2889/566489611.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/d1/55kcfbk15432jl_vkv7xjbrm0000gn/T/ipykernel_8196/566489611.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  ohlcv_df = pd.read_csv(\n"
      ]
     },
@@ -1940,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -1960,7 +1960,7 @@
        "        1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1988,7 +1988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -2026,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -2066,31 +2066,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2015-07-06 10:00:00</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>-0.025715</td>\n",
        "      <td>0.025715</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-07-06 10:45:00</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.007237</td>\n",
        "      <td>-0.007237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-07-06 14:15:00</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>-0.009721</td>\n",
        "      <td>-0.009721</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-07-06 14:30:00</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>-0.003841</td>\n",
        "      <td>0.003841</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-07-07 11:30:00</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>-0.018423</td>\n",
        "      <td>0.018423</td>\n",
        "    </tr>\n",
@@ -2099,13 +2099,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                    Predicted  Actual Returns  Strategy Returns\n",
-       "date                                                           \n",
-       "2015-07-06 10:00:00       NaN       -0.025715          0.025715\n",
-       "2015-07-06 10:45:00       NaN        0.007237         -0.007237\n",
-       "2015-07-06 14:15:00       NaN       -0.009721         -0.009721\n",
-       "2015-07-06 14:30:00       NaN       -0.003841          0.003841\n",
-       "2015-07-07 11:30:00       NaN       -0.018423          0.018423"
+       "                     Predicted  Actual Returns  Strategy Returns\n",
+       "date                                                            \n",
+       "2015-07-06 10:00:00        1.0       -0.025715          0.025715\n",
+       "2015-07-06 10:45:00        1.0        0.007237         -0.007237\n",
+       "2015-07-06 14:15:00        1.0       -0.009721         -0.009721\n",
+       "2015-07-06 14:30:00        1.0       -0.003841          0.003841\n",
+       "2015-07-07 11:30:00        1.0       -0.018423          0.018423"
       ]
      },
      "metadata": {},
@@ -2146,31 +2146,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2021-01-22 09:30:00</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>-0.006866</td>\n",
        "      <td>-0.006866</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-01-22 11:30:00</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.002405</td>\n",
        "      <td>-0.002405</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-01-22 13:45:00</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.002099</td>\n",
        "      <td>0.002099</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-01-22 14:30:00</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.001496</td>\n",
        "      <td>0.001496</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-01-22 15:45:00</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>-0.000896</td>\n",
        "      <td>-0.000896</td>\n",
        "    </tr>\n",
@@ -2179,13 +2179,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                    Predicted  Actual Returns  Strategy Returns\n",
-       "date                                                           \n",
-       "2021-01-22 09:30:00       NaN       -0.006866         -0.006866\n",
-       "2021-01-22 11:30:00       NaN        0.002405         -0.002405\n",
-       "2021-01-22 13:45:00       NaN        0.002099          0.002099\n",
-       "2021-01-22 14:30:00       NaN        0.001496          0.001496\n",
-       "2021-01-22 15:45:00       NaN       -0.000896         -0.000896"
+       "                     Predicted  Actual Returns  Strategy Returns\n",
+       "date                                                            \n",
+       "2021-01-22 09:30:00        1.0       -0.006866         -0.006866\n",
+       "2021-01-22 11:30:00        1.0        0.002405         -0.002405\n",
+       "2021-01-22 13:45:00        1.0        0.002099          0.002099\n",
+       "2021-01-22 14:30:00        1.0        0.001496          0.001496\n",
+       "2021-01-22 15:45:00        1.0       -0.000896         -0.000896"
       ]
      },
      "metadata": {},
@@ -2195,13 +2195,11 @@
    "source": [
     "# Create a new empty predictions DataFrame:\n",
     "\n",
-    "# predictions_df[\"actual returns\"] = trading_df[\"actual_returns\"]\n",
-    "\n",
     "# Create a predictions DataFrame\n",
     "predictions_df = pd.DataFrame(index = X_test.index, columns = ['Predicted', 'Actual Returns', 'Strategy Returns'])\n",
     "\n",
     "# Add the SVM model predictions to the DataFrame\n",
-    "# predictions_df['Predicted'] = svm_pred\n",
+    "predictions_df['Predicted'] = svm_model.predict(X_test_scaled)\n",
     "\n",
     "# # Add the actual returns to the DataFrame\n",
     "predictions_df['Actual Returns'] = signals_df['Actual Returns']\n",
@@ -2223,7 +2221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -2234,7 +2232,7 @@
        "<Axes: xlabel='date'>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2321,15 +2319,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import a new classifier from SKLearn\n",
-    "# YOUR CODE HERE\n",
+    ">>> from sklearn.model_selection import cross_val_score\n",
+    ">>> from sklearn.datasets import load_iris\n",
+    ">>> from sklearn.ensemble import AdaBoostClassifier\n",
     "\n",
     "# Initiate the model instance\n",
-    "# YOUR CODE HERE\n"
+    "model = AdaBoostClassifier()"
    ]
   },
   {
@@ -2341,18 +2341,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1., -1., -1., -1., -1.])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Fit the model using the training data\n",
-    "model = # YOUR CODE HERE\n",
+    "model = model.fit(X_train, y_train)\n",
     "\n",
     "# Use the testing dataset to generate the predictions for the new model\n",
-    "pred = # YOUR CODE HERE\n",
+    "pred = model.predict(X_test)\n",
     "\n",
     "# Review the model's predicted values\n",
-    "# YOUR CODE HERE\n"
+    "pred[:5]"
    ]
   },
   {
@@ -2370,12 +2381,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use a classification report to evaluate the model using the predictions and testing data\n",
-    "# YOUR CODE HERE\n",
+    "\n",
     "\n",
     "# Print the classification report\n",
     "# YOUR CODE HERE\n"
@@ -2383,7 +2394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2407,20 +2418,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Plot the actual returns versus the strategy returns\n",
     "# YOUR CODE HERE"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
