--- a/machine_learning_trading_bot.ipynb
+++ b/machine_learning_trading_bot.ipynb
@@ -2291,7 +2291,7 @@
     "\n",
     "Answer the following question: What impact resulted from increasing or decreasing either or both of the SMA windows?\n",
     "\n",
-    "ANSWER: By increasing/decreasing either SMA window, the impact appears minimal, however in the beginning we show it more correlated and parralel."
+    "ANSWER: By increasing/decreasing either SMA window (doubled for long window and increased short window from 4 to 25, the impact appears minimal, however in the beginning we show it more correlated and parralel."
    ]
   },
   {
